@@ -54,7 +54,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <release>23</release>
                     <compilerArgs>
@@ -66,7 +66,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
@@ -74,6 +74,10 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>chessgame.App</mainClass>
+                            <options>
+                                <option>--add-reads</option>
+                                <option>chessgame=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution> 
 
